--- a/index.html
+++ b/index.html
@@ -59,6 +59,5 @@
       </div>
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/airtable@0.11.1/dist/airtable.browser.js"></script>
-  <script src="./src/script.js"></script>
+  <script module src="./src/script.js"></script>
 </html>
