--- a/index.html
+++ b/index.html
@@ -59,5 +59,5 @@
       </div>
     </div>
   </body>
-  <script module src="./src/script.js"></script>
+  <script type="module" src="./src/script.js"></script>
 </html>
