--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/styles.css" />
+    <link rel="manifest" href="/manifest.json" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
     </style>
     <title>Learning</title>
-    <link rel="icon" type="image/x-icon" href="./public/flash-card.png" />
+    <link rel="icon" type="image/x-icon" href="/flash-card.png" />
   </head>
   <body>
     <div class="main">
