Dark mode tweaks

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             height="16"
             viewBox="0 0 24 24"
             fill="none"
-            stroke="#3f3f47"
+            stroke="currentColor"
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
