--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <p id="summary"></p>
       <image id="snippet" />
       <div id="highlight">
-        <span class="highlight-icon">
+        <span class="highlight-icon" style="display: none">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="16"
