Added some string tips

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
     </style>
-    <title>Learning</title>
+    <title>Flashcards</title>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" type="image/x-icon" href="/flash-card.png" />
   </head>
