Added dummy react category

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <select name="type" id="tip-selector">
         <option value="javascript">JavaScript</option>
         <option value="general">General</option>
+        <option value="react">React</option>
       </select>
     </div>
-    <div class="header1">
+    <!-- <div class="header1">
       <radio-group style="background-color: lightblue">
         <radio-button id="html" name="radio" value="javascript" checked
           >JavaScript</radio-button
@@ -29,7 +30,7 @@
           >General</radio-button
         >
       </radio-group>
-    </div>
+    </div> -->
     <div id="tip-container" class="content">
       <p>Loading...</p>
     </div>
