Added collapsible category selection

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/x-icon" href="/flash-card.png" />
   </head>
   <body>
-    <div class="header">
+    <div id="header">
       <select name="type" id="tip-selector">
         <option value="javascript">JavaScript</option>
         <option value="general">General</option>
