--- a/index.html
+++ b/index.html
@@ -14,23 +14,72 @@
     <link rel="icon" type="image/x-icon" href="/flash-card.png" />
   </head>
   <body>
-    <div id="header">
-      <select name="type" id="tip-selector">
-        <option value="javascript">JavaScript</option>
-        <option value="general">General</option>
-        <option value="react">React</option>
-      </select>
+    <div id="category-container">
+      <div class="radio-button-list">
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="javascript"
+            name="category"
+            value="JavaScript"
+            checked
+          />
+          <label for="javascript" class="label-text">JavaScript</label>
+        </div>
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="html"
+            name="category"
+            value="HTML"
+          />
+          <label for="html" class="label-text">HTML</label>
+        </div>
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="css"
+            name="category"
+            value="CSS"
+          />
+          <label for="css" class="label-text">CSS</label>
+        </div>
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="general"
+            name="category"
+            value="General"
+          />
+          <label for="general" class="label-text">General</label>
+        </div>
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="react"
+            name="category"
+            value="React"
+          />
+          <label for="react" class="label-text">React</label>
+        </div>
+        <div class="radio-container">
+          <input
+            class="radio"
+            type="radio"
+            id="tailwind"
+            name="category"
+            value="Tailwind"
+          />
+          <label for="tailwind" class="label-text">Tailwind</label>
+        </div>
+      </div>
     </div>
-    <!-- <div class="header1">
-      <radio-group style="background-color: lightblue">
-        <radio-button id="html" name="radio" value="javascript" checked
-          >JavaScript</radio-button
-        >
-        <radio-button id="html" name="radio" value="general"
-          >General</radio-button
-        >
-      </radio-group>
-    </div> -->
+
     <div id="tip-container" class="content">
       <p>Loading...</p>
     </div>
